11_minikube/_backups/old_deployments/chemistry/actinium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actinium
  labels:
    app: actinium
spec:
  selector:
    app: actinium
  type: ClusterIP
  ports:
    - port: 8080
