11_minikube/_backups/old_deployments/chemistry/actinium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actinium
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: actinium.192-168-49-2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actinium
                port:
                  number: 8080
